# mathhook

./: Cargo.toml
.github/workflows/: benchmark.yml  docker-builder.yml  release.yml  rollback.yml  security.yml  test.yml
crates/mathhook-binding-codegen/: Cargo.toml
crates/mathhook-core/src/algebra/factor/: common.rs  quadratic.rs
crates/mathhook-core/src/core/expression/: eval_numeric.rs
crates/mathhook-core/src/core/expression/evaluation/: core.rs
crates/mathhook-core/tests/e2e_tests/: evaluation_architecture.rs
crates/mathhook-macros/: Cargo.toml
crates/mathhook-node/: package-lock.json
crates/mathhook-python/: Cargo.toml
crates/mathhook-python/examples/: requirements.txt
