[workspace]
resolver = "2"
members = [
    "crates/mathhook-macros",
    "crates/mathhook-core",
    "crates/mathhook-benchmarks",
    "crates/mathhook-binding-codegen",
    "crates/mathhook-python",
    "crates/mathhook-node",
    "crates/mathhook",
]

[workspace.package]
version = "0.2.0"
edition = "2021"
authors = ["Ahmed Mashhour <mpghknown@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AhmedMashour/mathhook"
homepage = "https://github.com/AhmedMashour/mathhook"
documentation = "https://docs.rs/mathhook"
readme = "README.md"
keywords = ["mathematics", "algebra", "symbolic", "calculus", "education"]
categories = ["mathematics", "science", "algorithms"]

[workspace.dependencies]
# Core math dependencies
num-bigint = { version = "0.4", features = ["serde"] }
num-rational = { version = "0.4", features = ["serde"] }
num-traits = "0.2"
num-integer = "0.1"
rayon = "1.10.0"
tempfile = "3.27"

# Serializationf
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
once_cell = "1.21"
regex = "1.12.3"
dirs = "6.0.0"

# Testing and benchmarking
criterion = { version = "0.8.2", features = ["html_reports"] }
proptest = "1.10.0"

# Binding dependencies
pyo3 = "0.27.2"
napi = "3.8.3"
napi-derive = "3.5.2"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
lto = "thin"
codegen-units = 1
