[package]
name = "mathhook-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true
description = "Procedural macros for MathHook - expr!, symbol!, symbols!, function!"

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "2.0", features = ["full", "extra-traits"] }
proc-macro2 = "1.0"
convert_case = "0.11.0"

[dev-dependencies]
mathhook-core = { path = "../mathhook-core" }

[features]
python-bindings = []
nodejs-bindings = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
